--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,6 +46,24 @@
         </button>
       </div>
 
+      <div
+        style="
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          display: flex;
+          justify-content: end;
+          gap: 8px;
+          padding: 24px;
+          box-sizing: border-box;
+        ">
+        <button
+          class="button-secondary"
+          onclick="window.scrollTo({top:0, behavior:'smooth'});">
+          Natrag na vrh
+        </button>
+      </div>
+
       <h1 style="font-weight: 400; color: hsl(0, 0%, 60%)">
         <span style="font-weight: bold; color: hsl(0, 0%, 90%)">N</span
         >utritivne
