added download function for selected data in table

--- a/frontend/database.html
+++ b/frontend/database.html
@@ -188,7 +188,10 @@
           </div>
         </div>
         <input id="search-key-input" type="text" placeholder="Pretraži..." />
-        <button class="button-primary" style="margin-left: 8px">
+        <button
+          class="button-primary"
+          style="margin-left: 8px"
+          onclick="downloadJSON(convertTableToJSON())">
           Preuzmi Selekciju
         </button>
       </div>
